# bzip2-rs

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
bzip2-sys/: Cargo.toml  build.rs  lib.rs
src/: lib.rs  mem.rs
